Flesh out navbar, fix colors and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,22 @@ body {
     height: 100vh;
 }
 
+.bg-dark {
+    background-color: #222 !important;
+}
+
+.nav-link {
+    text-transform: uppercase;
+    font-family: "Roboto", serif;
+    font-weight: 100;
+    letter-spacing: 4px;
+    color: #eee !important;
+}
+
+.nav-link:hover {
+    color: #777 !important;
+}
+
 #intro {
     width: 100%;
     height: 30vh;
@@ -18,7 +34,7 @@ body {
 .intro-title {
     font-size: 7vmin;
     font-family: 'Lora', serif;
-    color: #111;
+    color: #222;
     user-select: none;
 }
 
